[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sprites/Buttons/AccessoryNormal.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Buttons/AccessoryHover.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Buttons/BottomHover.png" type="Texture" id=3]
[ext_resource path="res://PlacehoolderSprites/BG1.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Buttons/TopHover.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Buttons/TopNormal.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Buttons/BottomNormal.png" type="Texture" id=7]
[ext_resource path="res://ObjectScenes/InOverlay.tscn" type="PackedScene" id=8]
[ext_resource path="res://ObjectScenes/BackButton.tscn" type="PackedScene" id=9]
[ext_resource path="res://DisplayScenes/WardrobeMenu.gd" type="Script" id=10]
[ext_resource path="res://Fonts/DynamicFonts/ClothesEnglish.tres" type="DynamicFont" id=11]

[node name="WardrobeMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )

[node name="BG" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -529.0
margin_top = -332.5
margin_right = 529.0
margin_bottom = 332.5
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1058.0
margin_bottom = 161.0
custom_fonts/font = ExtResource( 11 )
text = "Wardobe
(Lemari Pakaian)"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 165.0
margin_right = 1058.0
margin_bottom = 665.0

[node name="Top" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_right = 350.0
margin_bottom = 500.0
rect_min_size = Vector2( 350, 500 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 5 )
expand = true
stretch_mode = 3

[node name="Bottom" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 354.0
margin_right = 704.0
margin_bottom = 500.0
rect_min_size = Vector2( 350, 500 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 3 )
expand = true
stretch_mode = 3

[node name="Accessory" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 708.0
margin_right = 1058.0
margin_bottom = 500.0
rect_min_size = Vector2( 350, 500 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 2 )
expand = true
stretch_mode = 3

[node name="BackButton" parent="." instance=ExtResource( 9 )]
targetScene = "MainMenu"

[node name="Overlay" parent="." instance=ExtResource( 8 )]
visible = false

[connection signal="button_down" from="VBoxContainer/HBoxContainer/Top" to="." method="_on_Top_button_down"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/Bottom" to="." method="_on_Bottom_button_down"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/Accessory" to="." method="_on_Accessory_button_down"]
